Bug 266781 - Fix occasional assertion in EventHandler::clearLatchedState since 269712@main
Summary: Fix occasional assertion in EventHandler::clearLatchedState since 269712@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alex Christensen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-12-21 12:52 PST by Alex Christensen
Modified: 2023-12-21 13:52 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Christensen 2023-12-21 12:52:51 PST
...
Comment 1 Radar WebKit Bug Importer 2023-12-21 12:53:04 PST
<rdar://problem/120009522>
Comment 2 Alex Christensen 2023-12-21 12:55:57 PST
Pull request: https://github.com/WebKit/WebKit/pull/22170
Comment 3 EWS 2023-12-21 13:52:04 PST
Committed 272430@main (8de179e4f869): <https://commits.webkit.org/272430@main>

Reviewed commits have been landed. Closing PR #22170 and removing active labels.