Fix occasional assertion in EventHandler::clearLatchedState since 269712@main https://bugs.webkit.org/show_bug.cgi?id=266781 rdar://120009522

Reviewed by Chris Dumez.

This fixes assertions like this:

ASSERTION FAILED: !m_deletionHasBegun
...
WTF::ThreadSafeRefCountedBase::ref() const
...
WebCore::EventHandler::protectedFrame() const
WebCore::EventHandler::clearLatchedState()
WebCore::EventHandler::clear()
WebCore::LocalFrame::setView(WTF::RefPtr<...>&&)
WebCore::LocalFrame::~LocalFrame()

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::clearLatchedState):

Canonical link: https://commits.webkit.org/272430@main